--- a/js-cli-quiz.html
+++ b/js-cli-quiz.html
@@ -110,7 +110,8 @@
                             <p><code>// Input Answer</code></p>
                             <p><code>var answer = readlineSync.question('Answer: ');</code></p>
                             <p><code> //compare answers</code></p>
-                            <p><code>if(answer.toLowerCase() === questions[i].answer.toLowerCase()){//on each correct answer print 'correct' and add 3 to 'score'</code></p>
+                            <p><code>if(answer.toLowerCase() === questions[i].answer.toLowerCase())</code></p>
+                            <p><code>    {//on each correct answer print 'correct' and add 3 to 'score'</code></p>
                             <p><code>console.log(chalk.bgGreen('Correct'));</code></p>
                             <p><code>score = score + 3;}</code></p>
                             <p><code>//on incorrect answer print 'incorrect' and subtract -1</code></p>
