--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <h1 class="tech-heading"><span class="heading-inverted" style="font-size: larger;"> projects </span></h1>
                     <h3 class="tech-heading">I like to showcase my work and thus, you can see my projects hosted online</h3>
                     <br />
-            <a class="link link-primary" href="/">See Projects</a>
+            <a class="link link-primary" href="/projects.html">See Projects</a>
                 </div>
                 <div class="column">
                     <img class="hero-img" src="media/project.svg" />
@@ -81,7 +81,7 @@
                     <h1 class="tech-heading"><span class="heading-inverted" style="font-size: larger;"> blogs </span></h1>
                     <h3 class="tech-heading">I am also working on some technical and non techincal blogs. I like to document my journey of learning.</h3>
                     <br />
-                    <a class="link link-secondary" href="/">Read Blogs</a>
+                    <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
                 </div>
             </div>
         </div>        
