--- a/js-cli-quiz.html
+++ b/js-cli-quiz.html
@@ -96,7 +96,7 @@
                 <blockquote style="font-weight: bold;">Print Questions and Options on screen and take input as answer</blockquote>
                
                   <div class="code-area">
-                    <p><code>var i = 0;i<span>questions</span>.length;i++)</code></p>
+                    <p><code>for(var i=0; i<span>questions</span>.length;i++)</code></p>
                  
                     <p><code>{</code></p> 
                         <div style="padding-left: 1.3rem;">
