--- a/js-cli-quiz.html
+++ b/js-cli-quiz.html
@@ -100,7 +100,7 @@
                  
                     <p><code>{</code></p> 
                         <div style="padding-left: 1.3rem;">
-                            <p><code>var n = i+1;</code></p>
+                            <p><code>for(var n = i+1;i< questions.length;i++</code></p>
                             <P><code>//question</code></p>
                             <p><code>console.log(chalk.inverse(n+'. '+questions[i].question));</code></p>
                             <p><code>//options</code></p>
