--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     </head>
 <body>
     <nav class="navigation container">
-        <div class="nav-brand" style="font-family: 'Cedarville Cursive'; font-size: 30px;"> < Web Dev /> </div>
+        <div class="nav-brand" style="font-family: 'Cedarville Cursive'; font-size: 30px;"> <a href="/">< Web Dev /></a> </div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="/">home</a>
