--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,46 @@
       <li>
         <section class="hero ow">
           <div class="container container-center">
+            <h1>Jomato</h1>
+            <small>December, 2020</small>
+            <p>A translator app built with <strong>vanilla JS</strong>.</p>
+            <br />
+            <a class="link link-primary" href="https://jomato.netlify.app/"
+              >Live Project</a
+            >
+            <a
+              class="link link-secondary"
+              href="https://github.com/MdBilal420/bon-appetit"
+              >View Source</a
+            >
+          </div>
+        </section>
+      </li>
+
+      <li>
+        <section class="hero">
+          <div class="container container-center">
+            <h1>Emogees</h1>
+            <small>December, 2020</small>
+            <p>
+              A fun translator app built with <strong>VanillaJS</strong>.Convert
+              your english sentences into banana talk.
+            </p>
+            <br />
+            <a class="link link-primary" href="https://emogees.netlify.app/"
+              >Live Project</a
+            >
+            <a
+              class="link link-secondary"
+              href="https://github.com/MdBilal420/emogees"
+              >View Source</a
+            >
+          </div>
+        </section>
+      </li>
+      <li>
+        <section class="hero ow">
+          <div class="container container-center">
             <h1>Yoda Talk</h1>
             <small>December, 2020</small>
             <p>A translator app built with <strong>vanilla JS</strong>.</p>
