project description and logo fixed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         class="nav-brand"
         style="font-family: 'Cedarville Cursive'; font-size: 30px; color: white"
       >
-        <a class="link" href="/">&lt; WEB DEV &gt;</a>
+        <a class="link" href="/">&lt; BiLal &gt;</a>
       </div>
       <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
