--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
         class="nav-brand"
         style="font-family: 'Cedarville Cursive'; font-size: 30px"
       >
-        <a class="link" href="/">&lt; WEB DEV &gt;</a>
+        <a class="link" href="/">&lt; BiLal &gt;</a>
       </div>
       <ul class="list-non-bullet nav-pills">
         <li class="list-item-inline">
@@ -49,7 +49,10 @@
           <div class="container container-center">
             <h1>Jomato</h1>
             <small>December, 2020</small>
-            <p>A translator app built with <strong>vanilla JS</strong>.</p>
+            <p>
+              An app with all your favourite Italian food built in
+              <strong>React JS</strong>.
+            </p>
             <br />
             <a class="link link-primary" href="https://jomato.netlify.app/"
               >Live Project</a
@@ -69,8 +72,8 @@
             <h1>Emogees</h1>
             <small>December, 2020</small>
             <p>
-              A fun translator app built with <strong>VanillaJS</strong>.Convert
-              your english sentences into banana talk.
+              Cool Emojis app which tells the meaning of emojis built in
+              <strong>React JS</strong>
             </p>
             <br />
             <a class="link link-primary" href="https://emogees.netlify.app/"
@@ -89,7 +92,10 @@
           <div class="container container-center">
             <h1>Yoda Talk</h1>
             <small>December, 2020</small>
-            <p>A translator app built with <strong>vanilla JS</strong>.</p>
+            <p>
+              A translator app built that can make you talk like Yoda
+              <strong>vanilla JS</strong>.
+            </p>
             <br />
             <a class="link link-primary" href="https://yoda-talk.netlify.app/"
               >Live Project</a
@@ -109,8 +115,9 @@
             <h1>banana talk</h1>
             <small>November, 2020</small>
             <p>
-              A fun translator app built with <strong>VanillaJS</strong>.Convert
-              your english sentences into banana talk.
+              A fun translator app built with
+              <strong>VanillaJS</strong> . Convert your english sentences into
+              banana talk.
             </p>
             <br />
             <a class="link link-primary" href="https://minions-app.netlify.app/"
