update :dark-light emoji

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </li>
 
         <li class="list-item-inline">
-          <button class="link link-primary" id="theme-toggle">Dark</button>
+          <a style="cursor: pointer; font-size: 1.5rem" id="theme-toggle">🌙</a>
         </li>
       </ul>
     </nav>
